# little-walk-upload

./: .env  Cargo.toml
curl/: download.curl  upload.curl  upload.headers
migrations/: 20230915234242_init.sql  20230916021220_rename-table.sql  20230916021532_rename-content-type-column.sql
src/: handlers.rs  main.rs
