[package]
name = "little-walk-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-form-data = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
upload-service = { git = "https://github.com/wangjun861205/upload-service.git" }
dotenv = "0.15.0"
futures = "0.3.28"
serde = "1.0.189"
sqlx = "0.7.1"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.75"
bytes = "1.5.0"
